tests/positive/constant_range_bound.safe
-- Test: constant_range_bound
-- Description: Local integer constant used in a type range bound.
-- Expected: ACCEPT

package constant_Range_Bound

   max_Count : constant integer = 4;

   type index is range 0 to max_Count;


