tests/negative/neg_write_to_constant_index.safe
-- Test: neg_write_to_constant_index
-- Description: Writes through an indexed part rooted in a constant object must be rejected.
-- Expected: REJECT write_to_constant

package neg_Write_To_Constant_Index

   type index is range 1 to 3;
   type buffer is array (index) of integer;

   function make_Buffer returns buffer
      result : buffer;

      for I in index
         result (I) = integer (I);

      return result;


   function run
      data : constant buffer = make_Buffer;

      data (1) = 0;



